--- a/index.html
+++ b/index.html
@@ -206,50 +206,6 @@
 <h2>Selected Publications [Total Citations: 3420] [Highest Citation: 933] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
-<!-- <h4>Selected Preprint Papers</h4>
-<table id="tbPublications" width="100%">
-	<tbody> -->
-    <!-- <tr>	
-		<td width="206">
-		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2304.06274.pdf" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising</a><br>
-		<b>Juncheng Li</b>, Bodong Cheng, Ying Chen, Guangwei Gao, and Tieyong Zeng
-		<p><em>arXiv 2304.06274</em>, 2023.<br>
-		<a href="paper/EWT_2023.pdf", target="_blank">[Paper]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr> -->
-	<!-- <tr>	
-		<td width="206">
-		<img src="./indexpics/PAMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2212.14181.pdf" target="_blank">Efficient Image Super-Resolution with Feature Interaction Weighted Hybrid Network</a><br>
-		Wenjie Li#, <b>Juncheng Li#</b>, Guangwei Gao*, Weihong Deng, Jian Yang, Guo-Jun Qi, and Chia-Wen Lin
-		<p><em>arXiv 2212.14181</em>, 2023.<br>
-		<a href="paper/FIWHN_2023.pdf", target="_blank">[Paper]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr> -->
-
-	<!-- <tr>	
-		<td width="206">
-		<img src="./indexpics/CFIN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2207.02796.pdf" target="_blank">Cross-receptive Focused Inference Network for Lightweight Image Super-Resolution</a><br>
-		Wenjie Li, <b>Juncheng Li</b>, Guangwei Gao*, Jiantao Zhou, Jian Yang, and Guo-Jun Qi.
-		<p><em>arXiv 2207.02796</em>, 2022.<br>
-		<a href="paper/CFIN.pdf", target="_blank">[Paper]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr> -->
-
 <h3>Selected Survey</h4>
 <table id="tbPublications" width="100%">
 	<tbody> 
@@ -273,7 +229,7 @@
 		<td width="206">
 		<img src="./indexpics/JIG.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/JIG_2023.pdf" target="_blank">Applications and Challenges of Deep Learning in Dental Imaging <font color="red">【New】</font></a><br>
+		<td> <a href="paper/JIG_2023.pdf" target="_blank">Applications and Challenges of Deep Learning in Dental Imaging</a><br>
 		Yang Zhao, <b>Juncheng Li*</b>, Bodong Cheng, Najun Niu, Longguang Wang, Guangwei Gao, Jun Shi
 		<p><em>Journal of Image and Graphics</em> (<i><b>Chinese Journal</b></i>), 2023. <br>
         <a href="http://www.cjig.cn/jig/ch/reader/download_new_edit_content.aspx?edit_id=20230904140109001&file_no=202302090000001&journal_id=jig", target="_blank">[Paper]</a>
@@ -286,6 +242,7 @@
 
 
 <h3>Medical Image Processing</h4>
+<h4>Selected Journal Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 	<tr>	
@@ -303,23 +260,9 @@
 	<tr></tr>
 	<tr>	
 		<td width="206">
-		<img src="./indexpics/TGCN-ICF.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/MICCAI_2024.pdf" target="_blank">Topological GCN for Improving Detection of Hip Landmarks from B-Mode Ultrasound Images<font color="red">【New】</font></a><br>
-		Tianxiang Huang, Jing Shi, Ge Jin, <b>Juncheng Li</b>, Jun Wang, Jun Du, and Jun Shi
-		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2024. <br>
-		<font color="red">Top medical image processing conference.（Oral Presentation）</font><br>
-        <a href="paper/MICCAI_2024.pdf", target="_blank">[Paper]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-	<tr>	
-		<td width="206">
 		<img src="./indexpics/ESWA.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://authors.elsevier.com/sd/article/S0957-4174(24)01121-7" target="_blank">Few Sampling Meshes-based 3D Tooth Segmentation via Region-Aware Graph Convolutional Network<font color="red">【New】</font></a><br>
+		<td> <a href="https://authors.elsevier.com/sd/article/S0957-4174(24)01121-7" target="_blank">Few Sampling Meshes-based 3D Tooth Segmentation via Region-Aware Graph Convolutional Network</a><br>
 		Yang Zhao, Bodong Cheng, Najun Niu, Jun Wang, Tieyong Zeng, Guixu Zhang, Jun Shi, <b>Juncheng Li*</b>
 		<p><em>Expert Systems with Applications</em> (<i><b>ESWA</b></i>), 2024. <br>
         <a href="", target="_blank">[Paper]</a>
@@ -332,7 +275,7 @@
 		<td width="206">
 		<img src="./indexpics/JBHI2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/JBHI_2024.pdf" target="_blank">Involution Transformer based U-Net for Landmark Detection in Ultrasound Images for Diagnosis of Infantile DDH<font color="red">【New】</font></a><br>
+		<td> <a href="paper/JBHI_2024.pdf" target="_blank">Involution Transformer based U-Net for Landmark Detection in Ultrasound Images for Diagnosis of Infantile DDH</a><br>
 		Tianxiang Huang, Jing Shi*, <b>Juncheng Li</b>, Jun Wang, Jun Du, Jun Shi*
 		<p><em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2024. <br>
         <a href="paper/JBHI_2024.pdf", target="_blank">[Paper]</a>
@@ -345,7 +288,7 @@
 		<td width="206">
 		<img src="./indexpics/TMI2024-2.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Cost-Sensitive Weighted Contrastive Learning Based on Graph Convolutional Networks for Imbalanced Alzheimer’s Disease Staging<font color="red">【New】</font></a><br>
+		<td> <a href="" target="_blank">Cost-Sensitive Weighted Contrastive Learning Based on Graph Convolutional Networks for Imbalanced Alzheimer’s Disease Staging</a><br>
 		Yan Hu, Jun Wang*, Hao Zhu, <b>Juncheng Li</b>, Jun Shi
 		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2024. <br>
         <a href="", target="_blank">[Paper]</a>
@@ -358,7 +301,7 @@
 		<td width="206">
 		<img src="./indexpics/TMI2024-1.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Weakly Supervised Lesion Detection and Diagnosis for Breast Cancers with Partially Annotated Ultrasound Images<font color="red">【New】</font></a><br>
+		<td> <a href="" target="_blank">Weakly Supervised Lesion Detection and Diagnosis for Breast Cancers with Partially Annotated Ultrasound Images</a><br>
 		Jian Wang, Liang Qiao, Shichong Zhou, Jin Zhou, Jun Wang, <b>Juncheng Li</b>, Shihui Ying, Cai Chang, Jun Shi*
 		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2024. <br>
         <a href="", target="_blank">[Paper]</a>
@@ -371,7 +314,7 @@
 		<td width="206">
 		<img src="./indexpics/Tooth.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/Fast-TGCN.pdf" target="_blank">A Fine-Grained Orthodontics Segmentation Model for 3D Intraoral Scan Data <font color="red">【New】</font></a><br>
+		<td> <a href="paper/Fast-TGCN.pdf" target="_blank">A Fine-Grained Orthodontics Segmentation Model for 3D Intraoral Scan Data</a><br>
 		<b>Juncheng Li</b>, Bodong Cheng, Najun Niu, Guangwei Gao, Shihui Ying, Jun Shi, Tieyong Zeng
 		<p><em>Computers in Biology and Medicine</em> (<i><b>CIBM</b></i>), 2023. <br>
         <a href="https://www.sciencedirect.com/science/article/pii/S0010482523012866", target="_blank">[Paper]</a>
@@ -422,20 +365,26 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-	<!-- <tr>	
+</tbody></table>
+
+
+<h4>Selected Conference Papers</h4>
+<table id="tbPublications" width="100%">
+	<tbody>
+	<tr>	
 		<td width="206">
-		<img src="./indexpics/PR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/TGCN-ICF.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/PR.pdf" target="_blank">Single-Particle Reconstruction in Cryo-EM based on Three-Dimensional
-			Weighted Nuclear Norm Minimization</a><br>
-			Chaoyan Huang, Tingting Wu, <b>Juncheng Li</b>, Bin Dong, Tieyong Zeng
-		<p><em>Pattern Recognition</em> (<i><b>PR</b></i>), 2023. <br>
-        <a href="https://www.sciencedirect.com/science/article/pii/S003132032300434X", target="_blank">[Paper]</a>
+		<td> <a href="paper/MICCAI_2024.pdf" target="_blank">Topological GCN for Improving Detection of Hip Landmarks from B-Mode Ultrasound Images<font color="red">【New】</font></a><br>
+		Tianxiang Huang, Jing Shi, Ge Jin, <b>Juncheng Li</b>, Jun Wang, Jun Du, and Jun Shi
+		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2024. <br>
+		<font color="red">Top medical image processing conference.（Oral Presentation）</font><br>
+        <a href="paper/MICCAI_2024.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr> -->
+	<tr></tr>
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/MICCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -451,6 +400,9 @@
     <tr></tr>
 	<tr></tr>
 </tbody></table>
+
+
+
 
 <h3>Image Restoration and Enhancement</h4>
 <h4>Selected Journal Papers</h4>
@@ -474,7 +426,7 @@
 		<td width="206">
 		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://www.sciencedirect.com/science/article/pii/S0893608024003022?dgcid=coauthor" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising <font color="red">【New】</font></a><br>
+		<td> <a href="https://www.sciencedirect.com/science/article/pii/S0893608024003022?dgcid=coauthor" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising</a><br>
 		<b>Juncheng Li</b>, Bodong Cheng, Ying Chen, Guangwei Gao, Jun Shi, and Tieyong Zeng
 		<p><em>Neural Networks</em> (<i><b>NN</b></i>), 2023. <br>
 		<a href="paper/NN_2024.pdf", target="_blank">[Paper]</a>
@@ -488,7 +440,7 @@
 		<td width="206">
 		<img src="./indexpics/CTCNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution <font color="red">【New】</font></a> (<font color="red"><i><b>ESI Highly Cited Paper, 24.05, 24.09</b></i></font>)<br>
+		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution</a> (<font color="red"><i><b>ESI Highly Cited Paper, 24.05, 24.09</b></i></font>)<br>
 		Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2023. <br>
 		<a href="paper/CTCNet.pdf", target="_blank">[Paper]</a>
@@ -709,7 +661,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference. [Citations: 910+]</font><br>
+		<font color="red">Top computer vision conference. [Citations: 930+]</font><br>
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
