--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </p>
 
 
-<h2>Recent News</h2>
+<h2>News</h2>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>I will serve as a Program Committee Member for IJCAI-25.</td></tr>
