--- a/index_zw.html
+++ b/index_zw.html
@@ -66,7 +66,7 @@
 	李俊诚，上海市青年科技英才“扬帆计划”获得者，入选2023年全球前2%顶尖科学家榜单，获中国产学研合作创新成果一等奖。博士毕业于华东师范大学，师从<b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b>教授，曾担任香港中文大学博后研究员，合作导师为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。2022年7月入职上海大学以来，主持包括国自然青年基金、上海市科委“科技创新行动计划”面上项目、上海市青年科技英才扬帆计划、上海高校青年教师重点资助项目及多个重点实验室开放课题。长期从事计算机视觉、自然图像/医学影像智能处理与人工智能等研究，取得了一系列原创性成果，在国际知名期刊和会议（如：ACM Computing Survey、IEEE TIP\TNNLS\TMM\TCSVT\TMI、CVPR、ECCV、ICCV、AAAI、IJCAI、MICCAI等）上发表论文50余篇（ESI高被引论文2篇）, 谷歌学术引用量超3300余次，其中单篇一作最高引用920余次。同时，还担任Mathematics和IET Computer Version期刊客座编辑、多个国际挑战赛的组织者和程序委员，并长期担任包括TPAMI、TIP、TNNLS、TMM、CVPR、ICCV、ECCV在内的多个国际期刊和会议审稿人。
 </p>
 
-<h2>近期新闻</h2>
+<h2>新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>我将担任 IJCAI-25 的程序委员会成员.</td></tr>
@@ -435,7 +435,7 @@
 	<tr></tr>
 </tbody></table>
 
-
+<h3>自然图像处理论文</h3>
 <h4>精选期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
