--- a/index_zw.html
+++ b/index_zw.html
@@ -284,24 +284,23 @@
 		</td>		
 		<td> <a href="paper/MCFN.pdf" target="_blank">Multimodal Co-attention Fusion Network with Online Data Augmentation for Cancer Subtype Classification<font color="red">【最新】</font></a><br>
 		Saisai Ding, <b>Juncheng Li</b>, Jun Wang, Shihui Ying, and Jun Shi
-		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI </b></i>), 2024. <br>
+		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2024. <br>
         <a href="paper/MCFN.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/ESWA.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://authors.elsevier.com/sd/article/S0957-4174(24)01121-7" target="_blank">Few Sampling Meshes-based 3D Tooth Segmentation via Region-Aware Graph Convolutional Network</a><br>
+		Yang Zhao, Bodong Cheng, Najun Niu, Jun Wang, Tieyong Zeng, Guixu Zhang, Jun Shi, <b>Juncheng Li*</b>
+		<p><em>Expert Systems with Applications</em> (<i><b>ESWA</b></i>), 2024. <br>
+        <a href="", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/TGCN-ICF.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/MICCAI_2024.pdf" target="_blank">Topological GCN for Improving Detection of Hip Landmarks from B-Mode Ultrasound Images</a><br>
-		Tianxiang Huang, Jing Shi, Ge Jin, <b>Juncheng Li</b>, Jun Wang, Jun Du, and Jun Shi
-		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2024. <br>
-		<font color="red">医学影像处理顶级会议. 口头报告（Oral Presentation）</font><br>
-        <a href="", target="_blank">[论文]</a>
-		</td>
-	</tr>
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
