--- a/index_zw.html
+++ b/index_zw.html
@@ -21,6 +21,17 @@
 
 </script>
 </head>
+
+<style>
+	.scroll-container {
+	  width: 940px; 
+	  height: 170px; 
+	  overflow: auto; 
+	  border: 1px solid #ccc; 
+	  padding: 10px; 
+	}
+</style>
+
 <body>
 
  <!-- <div id="layout-content" style="margin-top:25px">
@@ -77,7 +88,7 @@
 	</tbody>
 </table>
 
-<h2>基金项目</h2></ul>
+<h2>基金项目</h2>
 <ul>
 	<li>
 		--------主持--------
@@ -118,9 +129,7 @@
 </ul>
 
 <h2>精选论文接收情况</h2>
-<!-- <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 双目图像超分辨率挑战赛--圆满结束!</a></h3>
-
-<h3>2018-现在，28篇论文，3篇比赛报告</h3> -->
+<div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>一篇论文已被 IEEE JBHI 接收, 2024.</td></tr>
@@ -129,7 +138,7 @@
 		<tr><td>一篇论文已被 IEEE TMM 接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 CIBM 接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 IEEE TIM接收, 2024.</td></tr>
-		<!-- <tr><td>一篇论文已被 Information Processing and Management接收, 2024.</td></tr> -->
+		<tr><td>一篇论文已被 Information Processing and Management接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 IEEE TMI接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 ESWA接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 MICCAI接收, 2024 (Oral).</td></tr>
@@ -156,7 +165,7 @@
 		<!-- <tr><td>一篇论文已被 ICASSP接收, 2023.</td></tr>  -->
 		<!-- <tr><td>一篇论文已被 ACM TOMM接收, 2022.</td></tr>  -->
 		<tr><td>------博后期间-----------</td></tr> 
-		<!-- <tr><td>一篇论文已被 Neurocomputing接收, 2022.</td></tr>  -->
+		<tr><td>一篇论文已被 Neurocomputing接收, 2022.</td></tr>
 		<tr><td>一篇论文已被 IJCAI接收, 2022.</td></tr> 
 		<!-- <tr><td>一篇比赛报告已被 CVPR Workshop接收, 2022.</td></tr> 	 -->
 		<!-- <tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr>  -->
@@ -183,6 +192,7 @@
 		<!-- <tr><td>一篇比赛报告已被 CVPR Workshop接收, 2018.</td></tr> 	 -->
 	</tbody>
 </table>
+</div>
 
 
 <h2>荣誉 &amp; 奖项</h2>
@@ -239,7 +249,7 @@
 <h2>精选出版物 [总引用: 3437] [最高引用: 935] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
-<h3>精选综述</h3>
+<h3>综述</h3>
 	<table id="tbPublications" width="100%">
 		<tbody> 
 		<tr>	
@@ -275,7 +285,7 @@
 
 
 <h3>医学影像处理论文</h3>
-<h4>精选期刊论文</h4>
+<h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 	<tr>	
@@ -401,7 +411,7 @@
 </tbody></table>
 
 
-<h4>精选会议论文</h4>
+<h4>会议论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 	<tr>	
@@ -435,7 +445,7 @@
 </tbody></table>
 
 <h3>自然图像处理论文</h3>
-<h4>精选期刊论文</h4>
+<h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 	<tr>	
@@ -591,7 +601,7 @@
 	<tr></tr>
 </tbody></table>
 
-<h4>精选会议论文</h4></table>
+<h4>会议论文</h4></table>
 <table id="tbPublications" width="100%">
 	<tr>	
 		<td width="206">
@@ -700,7 +710,7 @@
 
 
 
-<h4>精选研讨会论文</h4></table></table>
+<h4>研讨会论文</h4></table></table>
 <table id="tbPublications" width="100%">
 	<tr>	
 		<td width="206">
@@ -1017,18 +1027,6 @@
 	</tbody>
 </table> -->
 
-<h2>合作者</h2>
-<table id="tbTeaching" border="0" width="100%">
-	<tbody>
-		<tr>	
-			<td><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong ZENG</a></td>
-			<td><a href="https://guangweigao.github.io/", target="_blank">Guangwei Gao</a></td>
-			<!-- <td><a href="https://kfmei.page/", target="_blank">Kangfu Mei</a></td> -->
-			<td><a href="https://longguangwang.github.io/", target="_blank">Longguang Wang</a></td>
-			<td><a href="https://yingqianwang.github.io/", target="_blank">Yingqian Wang</a></td>
-		</tr>
-	</tbody>
-</table>
 
  <!--
 <h2>参会 (2016.9-现在)</h2>
