--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
 
 </script>
 </head>
+
+<style>
+	.scroll-container {
+	  width: 940px; /* 容器宽度 */
+	  height: 170px; /* 容器高度 */
+	  overflow: auto; /* 当内容超出容器时显示滚动条 */
+	  border: 1px solid #ccc; /* 容器边框 */
+	  padding: 10px; /* 内边距 */
+	}
+</style>
+
+
 <body>
 
  <!-- <div id="layout-content" style="margin-top:25px">
@@ -85,10 +97,8 @@
 </table>
 
 
-<h2>Selected Papers</h2>
-<!-- <h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Finished!</a></h3>
-
-<h3>2018-Now, 28 Papers, 3 Challenge Reports</h3> -->
+<h2>Papers News</h2>
+<div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>One paper is accepted by IEEE JBHI, 2024.</td></tr>
@@ -97,7 +107,7 @@
 		<tr><td>One paper is accepted by IEEE TMM, 2024.</td></tr>
 		<tr><td>One paper is accepted by CIBM, 2024.</td></tr>
 		<tr><td>One paper is accepted by IEEE TIM, 2024.</td></tr>
-		<!-- <tr><td>One paper is accepted by Information Processing and Management, 2024.</td></tr> -->
+		<tr><td>One paper is accepted by Information Processing and Management, 2024.</td></tr>
 		<tr><td>One paper is accepted by IEEE TMI, 2024.</td></tr>
 		<tr><td>One paper is accepted by ESWA, 2024.</td></tr>
 		<tr><td>One paper is accepted by MICCAI, 2024. (Oral)</td></tr>
@@ -124,7 +134,7 @@
 		<!-- <tr><td>One paper is accepted by ICASSP, 2023.</td></tr>  -->
 		<!-- <tr><td>One paper is accepted by ACM TOMM, 2022.</td></tr>  -->
 		<tr><td>------Postdoc--------</td></tr> 
-		<!-- <tr><td>One paper is accepted by Neurocomputing, 2022.</td></tr>  -->
+		<tr><td>One paper is accepted by Neurocomputing, 2022.</td></tr>
 		<tr><td>One paper is accepted by IJCAI, 2022.</td></tr> 
 		<!-- <tr><td>One challenge report is accepted by CVPR Workshop, 2022.</td></tr> 	 -->
 		<!-- <tr><td>Two papers are accepted by CVPR Workshop, 2022.</td></tr>  -->
@@ -151,6 +161,7 @@
 		<!-- <tr><td>One challenge report is accepted by CVPR Workshop, 2018.</td></tr> 	 -->
 	</tbody>
 </table>
+</div>
 
 
 <h2>Honors &amp; Awards</h2>
@@ -206,7 +217,7 @@
 <h2>Selected Publications [Total Citations: 3437] [Highest Citation: 935] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
-<h3>Selected Survey</h4>
+<h3>Survey</h4>
 <table id="tbPublications" width="100%">
 	<tbody> 
     <tr>	
@@ -242,7 +253,7 @@
 
 
 <h3>Medical Image Processing</h4>
-<h4>Selected Journal Papers</h4>
+<h4>Journal Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 	<tr>	
@@ -368,7 +379,7 @@
 </tbody></table>
 
 
-<h4>Selected Conference Papers</h4>
+<h4>Conference Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 	<tr>	
@@ -405,7 +416,7 @@
 
 
 <h3>Image Restoration and Enhancement</h4>
-<h4>Selected Journal Papers</h4>
+<h4>Journal Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
 	<tr>	
@@ -565,7 +576,7 @@
 
 
 
-<h4>Selected Conference Papers</h4></table>
+<h4>Conference Papers</h4></table>
 <table id="tbPublications" width="100%">
 	<tr>	
 		<td width="206">
@@ -677,7 +688,7 @@
 
 
 
-<h4>Selected Workshop Papers</h4></table></table>
+<h4>Workshop Papers</h4></table></table>
 <table id="tbPublications" width="100%">
 	<tr>	
 		<td width="206">
@@ -993,18 +1004,6 @@
 	</tbody>
 </table> -->
 
-<h2>Collaborators</h2>
-<table id="tbTeaching" border="0" width="100%">
-	<tbody>
-		<tr>	
-			<td><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong ZENG</a></td>
-			<td><a href="https://guangweigao.github.io/", target="_blank">Guangwei Gao</a></td>
-			<!-- <td><a href="https://kfmei.page/", target="_blank">Kangfu Mei</a></td> -->
-			<td><a href="https://longguangwang.github.io/", target="_blank">Longguang Wang</a></td>
-			<td><a href="https://yingqianwang.github.io/", target="_blank">Yingqian Wang</a></td>
-		</tr>
-	</tbody>
-</table>
 
  <!--
 <h2>Meeting (2016.9-Now)</h2>
