--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 <h2>News</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper (IEEE TMM) is selected as Highly Cited Papers in the latest issue of ESI Index, 2025.</td></tr>
 		<tr><td>I will serve as a Program Committee Member for IJCAI-25.</td></tr>
 		<tr><td>One paper (IEEE TIP) is selected as Highly Cited Papers in the latest issue of ESI Index, 2024.</td></tr>
 		<tr><td>Selected into the World's Top 2% Scientists list, 2023.</td></tr>
@@ -435,11 +436,25 @@
 
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/CFIN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Cross-Receptive Focused Inference Network for Lightweight Image Super-Resolution (<font color="red"><i><b>ESI Highly Cited Paper, 25.01</b></i></font>)<br></a><br>
+		Wenjie Li, <b>Juncheng Li</b>, Guangwei Gao, Weihong Deng, Jiantao Zhou, Jian Yang, and Guo-Jun Qi
+		<p><em>IEEE Transactions on Multimedia</em> (<i><b>TMM</b></i>), 2024. <br>
+		<a href="paper/CFIN.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://www.sciencedirect.com/science/article/pii/S0893608024003022?dgcid=coauthor" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising</a><br>
 		<b>Juncheng Li</b>, Bodong Cheng, Ying Chen, Guangwei Gao, Jun Shi, and Tieyong Zeng
-		<p><em>Neural Networks</em> (<i><b>NN</b></i>), 2023. <br>
+		<p><em>Neural Networks</em> (<i><b>NN</b></i>), 2024. <br>
 		<a href="paper/NN_2024.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
@@ -451,7 +466,7 @@
 		<td width="206">
 		<img src="./indexpics/CTCNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution</a> (<font color="red"><i><b>ESI Highly Cited Paper, 24.05, 24.09</b></i></font>)<br>
+		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution</a> (<font color="red"><i><b>ESI Highly Cited Paper, 24.05, 24.09, 24.11, 25.01</b></i></font>)<br>
 		Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2023. <br>
 		<a href="paper/CTCNet.pdf", target="_blank">[Paper]</a>
@@ -465,7 +480,7 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a> (<font color="red"><i><b>ESI Highly Cited Paper, 23.11, 24.01, 24.05, 24.07, 24.09</b></i></font>)<br>
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a> (<font color="red"><i><b>ESI Highly Cited Paper, 23.11, 24.01, 24.05, 24.07, 24.09, 24.11, 25.01</b></i></font>)<br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<a href="paper/FBSNet.pdf", target="_blank">[Paper]</a>
