--- a/index_zw.html
+++ b/index_zw.html
@@ -80,6 +80,7 @@
 <h2>新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>1 篇论文（IEEE TMM）入选ESI高被引论文, 2025.</td></tr>
 		<tr><td>我将担任 IJCAI-25 的程序委员会成员.</td></tr>
 		<tr><td>1 篇论文（IEEE TIP）入选ESI高被引论文, 2024.</td></tr>
 		<tr><td>入选全球前2%顶尖科学家榜单, 2023.</td></tr>
@@ -462,13 +463,27 @@
     <tr></tr>
 	<tr></tr>
 
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/CFIN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Cross-Receptive Focused Inference Network for Lightweight Image Super-Resolution (<font color="red"><i><b>高被引论文, 25.01</b></i></font>)</a><br>
+		Wenjie Li, <b>Juncheng Li</b>, Guangwei Gao, Weihong Deng, Jiantao Zhou, Jian Yang, and Guo-Jun Qi
+		<p><em>IEEE Transactions on Multimedia</em> (<i><b>TMM</b></i>), 2024. <br>
+		<a href="paper/CFIN.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
     <tr>	
 		<td width="206">
 		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://www.sciencedirect.com/science/article/pii/S0893608024003022?dgcid=coauthor" target="_blank">EWT: Efficient Wavelet-Transformer for Single Image Denoising </a><br>
 		<b>Juncheng Li</b>, Bodong Cheng, Ying Chen, Guangwei Gao, Jun Shi, and Tieyong Zeng
-		<p><em>Neural Networks</em> (<i><b>NN</b></i>), 2023. <br>
+		<p><em>Neural Networks</em> (<i><b>NN</b></i>), 2024. <br>
 		<a href="paper/NN_2024.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
@@ -480,7 +495,7 @@
 		<td width="206">
 		<img src="./indexpics/CTCNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution (<font color="red"><i><b>高被引论文, 24.05, 24.09</b></i></font>)</a><br>
+		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution (<font color="red"><i><b>高被引论文, 24.05, 24.09, 24.11, 25.01</b></i></font>)</a><br>
 		Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2023. <br>
 		<a href="paper/CTCNet.pdf", target="_blank">[论文]</a>
@@ -494,7 +509,7 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a> (<font color="red"><i><b>高被引论文, 23.11, 24.01, 24.05, 24.07, 24.09</b></i></font>)<br>
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a> (<font color="red"><i><b>高被引论文, 23.11, 24.01, 24.05, 24.07, 24.09, 24.11, 25.01</b></i></font>)<br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<a href="paper/FBSNet.pdf", target="_blank">[论文]</a>
