--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 3700] [Highest Citation: 964] </h2>
+<h2>Selected Publications [Total Citations: 3709] [Highest Citation: 964] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
@@ -939,6 +939,9 @@
 		</tr>
 		<tr>
 			<td> International Joint Conference on Artificial Intelligence (IJCAI)</td>
+		</tr>
+		<tr>
+			<td> ACM Multimedia (ACMMM)</td>
 		</tr>
 		<tr>
 			<td> International Conference on Medical Image Computing and Computer-Assisted Intervention (MICCAI)</td>
