--- a/index_zw.html
+++ b/index_zw.html
@@ -247,7 +247,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 3700] [最高引用: 964] </h2>
+<h2>精选出版物 [总引用: 3709] [最高引用: 964] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
@@ -962,6 +962,9 @@
 		</tr>
 		<tr>
 			<td> International Joint Conference on Artificial Intelligence (IJCAI)</td>
+		</tr>
+		<tr>
+			<td> ACM Multimedia (ACMMM)</td>
 		</tr>
 		<tr>
 			<td> International Conference on Medical Image Computing and Computer-Assisted Intervention (MICCAI)</td>
