--- a/index_zw.html
+++ b/index_zw.html
@@ -133,6 +133,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 ESWA 接收, 2025.</td></tr>
 		<tr><td>一篇论文已被 IEEE JBHI 接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 CIBM 接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 IEEE TCSVT 接收, 2024.</td></tr>
