--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by ESWA, 2025.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2024.</td></tr>
 		<tr><td>One paper is accepted by CIBM, 2024.</td></tr>
 		<tr><td>One paper is accepted by IEEE TCSVT, 2024.</td></tr>
