--- a/index_zw.html
+++ b/index_zw.html
@@ -133,6 +133,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 IEEE TMI 接收, 2025.</td></tr>
 		<tr><td>一篇论文已被 ESWA 接收, 2025.</td></tr>
 		<tr><td>一篇论文已被 IEEE JBHI 接收, 2024.</td></tr>
 		<tr><td>一篇论文已被 CIBM 接收, 2024.</td></tr>
@@ -248,7 +249,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 3902] [最高引用: 981] </h2>
+<h2>精选出版物 [总引用: 3903] [最高引用: 981] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
@@ -290,6 +291,16 @@
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/HFMT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">MHigh-frequency Modulated Transformer for Multi-Contrast MRI Super-Resolution<font color="red">【最新】</font></a><br>
+			<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Minhua Lu, Jun Shi, Tieyong Zeng
+		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2025. <br>
+        <a href="", target="_blank">[论文]</a>
+		</td>
+	</tr>
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/MCFN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
