--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by IEEE TMI, 2025.</td></tr>
 		<tr><td>One paper is accepted by ESWA, 2025.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2024.</td></tr>
 		<tr><td>One paper is accepted by CIBM, 2024.</td></tr>
@@ -216,7 +217,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 3902] [Highest Citation: 981] </h2>
+<h2>Selected Publications [Total Citations: 3903] [Highest Citation: 981] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
@@ -258,6 +259,16 @@
 <h4>Journal Papers</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/HFMT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">MHigh-frequency Modulated Transformer for Multi-Contrast MRI Super-Resolution<font color="red">【New】</font></a><br>
+		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Minhua Lu, Jun Shi, Tieyong Zeng
+		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2025. <br>
+        <a href="", target="_blank">[Paper]</a>
+		</td>
+	</tr>
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/MCFN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
