--- a/index.html
+++ b/index.html
@@ -84,6 +84,19 @@
 	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b>. I also served as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>, in 2021-2022. My research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation, object detection) and image processing (e.g., image super-resolution, image restoration under adverse weather, medical image processing). I have published more than 50 papers in top journals and conferences, including ACM Computing Survey, IEEE TIP\TNNLS\TMM\TCSVT\TMI, CVPR, ECCV, ICCV, AAAI, IJCAI, and MICCAI. Meanwhile, I received several premium awards, including the first prize for Innovation Achievements in Industry-Academia-Research Cooperation in China 2023, the Outstanding Ph.D. Graduates in Shanghai 2021, the CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 30 international conferences/journals, including TPAMI, TIP,TNNLS, TMM, TCSVT, CVPR, ICCV, ECCV, and MICCAI.
 </p>
 
+<table id="tbPublications" width="100%">
+	<tbody> 
+		<tr>	
+			<td width="206">
+			<img src="./pic/Wechat.jpg" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td>Intelligent Imaging Computing Lab (IIC Lab)<br>
+			<td>Welcome to follow!<br>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
 
 <h2>News</h2>
 <table style="border-spacing:2px">
@@ -102,6 +115,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted by ESWA, 2025.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2025.</td></tr>
 		<tr><td>One paper is accepted by IEEE TMI, 2025.</td></tr>
 		<tr><td>One paper is accepted by ESWA, 2025.</td></tr>
@@ -224,11 +238,24 @@
 <h3>Survey</h4>
 <table id="tbPublications" width="100%">
 	<tbody> 
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/ESWA2025.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Fast MRI Reconstruction: A Thorough Survey from Single-Modal to Multi-Modal<font color="red">【New】</font></a><br>
+		Weiyi Lyu, Xinming Fang, Chaoyan Huang, Minhua Lu*, Jun Wang, Jun Shi, Juncheng Lia∗
+		<p><em>Expert Systems with Applications</em> (<i><b>ESWA</b></i>), 2025.<br>
+		<a href="", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
     <tr>	
 		<td width="206">
 		<img src="./indexpics/CSUR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://dl.acm.org/doi/abs/10.1145/3659100" target="_blank">A Systematic Survey of Deep Learning-based Single-Image Super-Resolution <font color="red">【New】</font></a><br>
+		<td> <a href="https://dl.acm.org/doi/abs/10.1145/3659100" target="_blank">A Systematic Survey of Deep Learning-based Single-Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Zehua Pei, Wenjie Li, Guangwei Gao, Longguang Wang, Yingqian Wang, Tieyong Zeng
 		<p><em>ACM Computing Surveys</em> (<i><b>CUSR</b></i>), 2024.<br>
 		<iframe src="https://ghbtns.com/github-btn.html?user=CV-JunchengLi&repo=SISR-Survey
@@ -265,16 +292,26 @@
 		<img src="./indexpics/HFMT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank">MHigh-frequency Modulated Transformer for Multi-Contrast MRI Super-Resolution<font color="red">【New】</font></a><br>
-		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Minhua Lu, Jun Shi, Tieyong Zeng
+		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Minhua Lu, Jun Shi, and Tieyong Zeng
 		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2025. <br>
         <a href="", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/TGCN-ICF-2.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/TGCN.pdf" target="_blank">Topological GCN Guided Improved Conformer for Detection of Hip Landmarks from Ultrasound Images<font color="red">【New】</font></a><br>
+		Tianxiang Huang, Jing Shi, Ge Jin, <b>Juncheng Li</b>, Jun Wang, Qian Wang, Jun Du, and Jun Shi,
+		<p><em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2025. <br>
+        <a href="paper/TGCN.pdf", target="_blank">[Paper]</a>
+		</td>
+	</tr>
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/MCFN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/MCFN.pdf" target="_blank">Multimodal Co-attention Fusion Network with Online Data Augmentation for Cancer Subtype Classification<font color="red">【New】</font></a><br>
+		<td> <a href="paper/MCFN.pdf" target="_blank">Multimodal Co-attention Fusion Network with Online Data Augmentation for Cancer Subtype Classification</a><br>
 		Saisai Ding, <b>Juncheng Li</b>, Jun Wang, Shihui Ying, and Jun Shi
 		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2024. <br>
         <a href="paper/MCFN.pdf", target="_blank">[Paper]</a>
