--- a/index_zw.html
+++ b/index_zw.html
@@ -77,6 +77,20 @@
 	李俊诚，上海市青年科技英才“扬帆计划”获得者，入选斯坦福大学发布的全球前2%顶尖科学家榜单，获中国产学研合作创新成果一等奖。博士毕业于华东师范大学，师从<b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b>教授，曾担任香港中文大学博后研究员，合作导师为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。2022年7月入职上海大学以来，主持包括国自然青年基金、上海市科委“科技创新行动计划”面上项目、上海市青年科技英才扬帆计划、上海高校青年教师重点资助项目及多个重点实验室开放课题。长期从事计算机视觉、自然图像/医学影像智能处理与人工智能等研究，取得了一系列原创性成果，在国际知名期刊和会议（如：ACM Computing Survey、IEEE TIP\TNNLS\TMM\TCSVT\TMI、CVPR、ECCV、ICCV、AAAI、IJCAI、MICCAI等）上发表论文50余篇（ESI高被引论文3篇）, 谷歌学术引用量超3600余次，其中单篇一作最高引用950余次。同时，还担任Mathematics和IET Computer Version期刊客座编辑、多个国际挑战赛的组织者和程序委员，并长期担任包括TPAMI、TIP、TNNLS、TMM、CVPR、ICCV、ECCV、MICCAI在内的多个国际期刊和会议审稿人。
 </p>
 
+
+<table id="tbPublications" width="100%">
+	<tbody> 
+		<tr>	
+			<td width="206">
+			<img src="./pic/Wechat.jpg" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td>智能影像计算实验室<br>
+			<td>团队公众号，欢迎关注！<br>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
 <h2>新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
@@ -133,6 +147,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文已被 ESWA 接收, 2025.</td></tr>
 		<tr><td>一篇论文已被 IEEE JBHI 接收, 2025.</td></tr>
 		<tr><td>一篇论文已被 IEEE TMI 接收, 2025.</td></tr>
 		<tr><td>一篇论文已被 ESWA 接收, 2025.</td></tr>
@@ -255,12 +270,25 @@
 
 <h3>综述</h3>
 	<table id="tbPublications" width="100%">
-		<tbody> 
+		<tbody>
+		<tr>	
+		    <td width="206">
+		    <img src="./indexpics/ESWA2025.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		    </td>		
+		    <td> <a href="" target="_blank">Fast MRI Reconstruction: A Thorough Survey from Single-Modal to Multi-Modal<font color="red">【最新】</font></a><br>
+		    Weiyi Lyu, Xinming Fang, Chaoyan Huang, Minhua Lu*, Jun Wang, Jun Shi, Juncheng Lia∗
+		    <p><em>Expert Systems with Applications</em> (<i><b>ESWA</b></i>), 2025.<br>
+		    <a href="", target="_blank">[论文]</a>
+		    </td>
+	    </tr>
+	    <tr></tr>
+        <tr></tr>
+	    <tr></tr> 
 		<tr>	
 			<td width="206">
 			<img src="./indexpics/CSUR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 			</td>		
-			<td> <a href="https://dl.acm.org/doi/abs/10.1145/3659100" target="_blank">A Systematic Survey of Deep Learning-based Single-Image Super-Resolution <font color="red">【最新】</font></a><br>
+			<td> <a href="https://dl.acm.org/doi/abs/10.1145/3659100" target="_blank">A Systematic Survey of Deep Learning-based Single-Image Super-Resolution</a><br>
 			<b>Juncheng Li</b>, Zehua Pei, Wenjie Li, Guangwei Gao, Longguang Wang, Yingqian Wang, Tieyong Zeng
 			<p><em>ACM Computing Surveys</em> (<i><b>CUSR</b></i>), 2024.<br>
 			<iframe src="https://ghbtns.com/github-btn.html?user=CV-JunchengLi&repo=SISR-Survey
@@ -297,16 +325,26 @@
 		<img src="./indexpics/HFMT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank">MHigh-frequency Modulated Transformer for Multi-Contrast MRI Super-Resolution<font color="red">【最新】</font></a><br>
-			<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Minhua Lu, Jun Shi, Tieyong Zeng
+		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Minhua Lu, Jun Shi, and Tieyong Zeng
 		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2025. <br>
         <a href="", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/TGCN-ICF-2.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/TGCN.pdf" target="_blank">Topological GCN Guided Improved Conformer for Detection of Hip Landmarks from Ultrasound Images<font color="red">【最新】</font></a><br>
+		Tianxiang Huang, Jing Shi, Ge Jin, <b>Juncheng Li</b>, Jun Wang, Qian Wang, Jun Du, and Jun Shi,
+		<p><em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2025. <br>
+        <a href="paper/TGCN.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/MCFN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/MCFN.pdf" target="_blank">Multimodal Co-attention Fusion Network with Online Data Augmentation for Cancer Subtype Classification<font color="red">【最新】</font></a><br>
+		<td> <a href="paper/MCFN.pdf" target="_blank">Multimodal Co-attention Fusion Network with Online Data Augmentation for Cancer Subtype Classification</a><br>
 		Saisai Ding, <b>Juncheng Li</b>, Jun Wang, Shihui Ying, and Jun Shi
 		<p><em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2024. <br>
         <a href="paper/MCFN.pdf", target="_blank">[论文]</a>
