--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 			<td width="206">
 			<img src="./pic/Wechat.jpg" width="200" height = "200" style="box-shadow: 4px 4px 8px #888">
 			</td>		
-			<td>Intelligent Imaging Computing Lab (IIC Lab)<br>
-			<td>Welcome to follow!<br>
+			<td>Intelligent Imaging Computing Lab (IIC Lab)</td><br>
+			<td>Welcome to follow!</td><br>
 			</td>
 		</tr>
 	</tbody>
