--- a/index_zw.html
+++ b/index_zw.html
@@ -84,8 +84,8 @@
 			<td width="206">
 			<img src="./pic/Wechat.jpg" width="200" height = "200" style="box-shadow: 4px 4px 8px #888">
 			</td>		
-			<td>智能影像计算实验室<br>
-			<td>团队公众号，欢迎关注！<br>
+			<td>智能影像计算实验室</td><br>
+			<td>团队公众号，欢迎关注！</td><br>
 			</td>
 		</tr>
 	</tbody>
