--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
 <h2>News</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>I will serve as a PC Member for ECAI-25.</td></tr>
 		<tr><td>One paper (IEEE TMM) is selected as Highly Cited Papers in the latest issue of ESI Index, 2025.</td></tr>
-		<tr><td>I will serve as a Program Committee Member for IJCAI-25.</td></tr>
+		<tr><td>I will serve as a PC Member for IJCAI-25.</td></tr>
 		<tr><td>One paper (IEEE TIP) is selected as Highly Cited Papers in the latest issue of ESI Index, 2024.</td></tr>
 		<tr><td>Selected into the World's Top 2% Scientists list, 2023.</td></tr>
 		<tr><td>One paper (IEEE TMM) is selected as Highly Cited Papers in the latest issue of ESI Index, 2023.</td></tr>
@@ -232,7 +233,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 3981] [Highest Citation: 989] </h2>
+<h2>Selected Publications [Total Citations: 3982] [Highest Citation: 990] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
@@ -893,6 +894,9 @@
 <h3>Program Committee Member (PC member)</h3>
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
+			<tr>
+				<td> <a href="https://ecai2025.org/", target="_blank">28th European Conference on Artificial Intelligence (ECAI-25), 2025.</a></td>
+			</tr>
 			<tr>
 				<td> <a href="https://2025.ijcai.org/", target="_blank">34th International Joint Conference on Artificial Intelligence (IJCAI-25), 2025.</a></td>
 			</tr>
