--- a/index_zw.html
+++ b/index_zw.html
@@ -94,8 +94,9 @@
 <h2>新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>我将担任 ECAI-25 的程序委员会成员（PC）.</td></tr>
 		<tr><td>1 篇论文（IEEE TMM）入选ESI高被引论文, 2025.</td></tr>
-		<tr><td>我将担任 IJCAI-25 的程序委员会成员.</td></tr>
+		<tr><td>我将担任 IJCAI-25 的程序委员会成员（PC）.</td></tr>
 		<tr><td>1 篇论文（IEEE TIP）入选ESI高被引论文, 2024.</td></tr>
 		<tr><td>入选全球前2%顶尖科学家榜单, 2023.</td></tr>
 		<tr><td>1 篇论文（IEEE TMM）入选ESI高被引论文, 2023.</td></tr>
@@ -265,7 +266,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 3981] [最高引用: 989] </h2>
+<h2>精选出版物 [总引用: 3982] [最高引用: 990] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
@@ -917,6 +918,9 @@
 <h3>程序委员会成员 (PC member)</h3>
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
+			<tr>
+				<td> <a href="https://ecai2025.org/", target="_blank">28th European Conference on Artificial Intelligence (ECAI-25), 2025.</a></td>
+			</tr>
 			<tr>
 				<td> <a href="https://2025.ijcai.org/", target="_blank">34th International Joint Conference on Artificial Intelligence (IJCAI-25), 2025.</a></td>
 			</tr>
