--- a/index_zw.html
+++ b/index_zw.html
@@ -94,7 +94,7 @@
 <h2>新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>我将担任 ECAI-25 的程序委员会成员（PC）.</td></tr>
+		<tr><td>我将担任 ECAI-25 的高级程序委员会成员（SPC）.</td></tr>
 		<tr><td>1 篇论文（IEEE TMM）入选ESI高被引论文, 2025.</td></tr>
 		<tr><td>我将担任 IJCAI-25 的程序委员会成员（PC）.</td></tr>
 		<tr><td>1 篇论文（IEEE TIP）入选ESI高被引论文, 2024.</td></tr>
@@ -266,7 +266,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 4041] [最高引用: 998] </h2>
+<h2>精选出版物 [总引用: 4045] [最高引用: 998] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
