--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <h2>News</h2>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>I will serve as a PC Member for ECAI-25.</td></tr>
+		<tr><td>I will serve as a SPC for ECAI-25.</td></tr>
 		<tr><td>One paper (IEEE TMM) is selected as Highly Cited Papers in the latest issue of ESI Index, 2025.</td></tr>
 		<tr><td>I will serve as a PC Member for IJCAI-25.</td></tr>
 		<tr><td>One paper (IEEE TIP) is selected as Highly Cited Papers in the latest issue of ESI Index, 2024.</td></tr>
@@ -233,7 +233,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 4041] [Highest Citation: 998] </h2>
+<h2>Selected Publications [Total Citations: 4045] [Highest Citation: 998] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
