--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>Congratulations! MSRN has reached 1,000 citations!</td></tr>
 		<tr><td>One paper is accepted by ESWA, 2025.</td></tr>
 		<tr><td>One paper is accepted by IEEE JBHI, 2025.</td></tr>
 		<tr><td>One paper is accepted by IEEE TMI, 2025.</td></tr>
@@ -233,7 +234,7 @@
 	</li>
 </ul>
 
-<h2>Selected Publications [Total Citations: 4053] [Highest Citation: 999] </h2>
+<h2>Selected Publications [Total Citations: 4056] [Highest Citation: 1000] </h2>
 <h3>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
