--- a/index_zw.html
+++ b/index_zw.html
@@ -148,6 +148,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>祝贺！MSRN的引用次数已达1,000次！</td></tr>
 		<tr><td>一篇论文已被 ESWA 接收, 2025.</td></tr>
 		<tr><td>一篇论文已被 IEEE JBHI 接收, 2025.</td></tr>
 		<tr><td>一篇论文已被 IEEE TMI 接收, 2025.</td></tr>
@@ -266,7 +267,7 @@
 </ul>
 
 
-<h2>精选出版物 [总引用: 4053] [最高引用: 999] </h2>
+<h2>精选出版物 [总引用: 4056] [最高引用: 1000] </h2>
 <h3>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
